@@ -1,21 +1,12 @@
 {
-  "timestamp" : "2025-04-11T01:58:57Z",
-  "count_outdated" : 259,
-  "uniques_outdated" : 225,
-  "count" : 261,
-  "uniques" : 227,
+  "timestamp" : "2025-04-20T02:06:50Z",
+  "count_outdated" : 261,
+  "uniques_outdated" : 227,
+  "count" : 262,
+  "uniques" : 228,
   "clones" : [
     {
-      "timestamp": "2025-03-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2025-03-31T00:00:00Z",
+      "timestamp": "2025-04-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
