@@ -1,14 +1,9 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 1,
+  "uniques": 1,
   "clones": [
     {
-      "timestamp": "2025-03-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-03-31T00:00:00Z",
+      "timestamp": "2025-04-19T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
